# python-project-lvl4

./: .coverage  .flake8  .gitignore  Makefile  Procfile  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: pyci.yml
task_manager/: local_settings.py  settings.py  urls.py  wsgi.py
task_manager/locale/en/LC_MESSAGES/: django.mo  django.po
task_manager/web/: admin.py  apps.py  filters.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
task_manager/web/migrations/: 0001_initial.py  0002_alter_tasks_creator.py  0002_alter_tasks_executor.py  0002_alter_tasks_labels.py  0002_delete_profile.py  0002_myuser.py  0003_alter_tasks_creator_alter_tasks_executor_and_more.py  0003_alter_tasks_executor.py  0003_delete_myuser.py  0003_initial.py  0004_alter_labels_name_alter_statuses_name_and_more.py  0004_delete_profile.py  0004_myuser.py  0005_alter_statuses_name.py  0005_initial.py  0006_alter_statuses_name.py  0006_tasks.py  0007_alter_tasks_description.py  0008_labels_tasks_labels.py
task_manager/web/static/css/: cover.css
task_manager/web/templates/: base.html  navbar_in.html  navbar_out.html
task_manager/web/templates/pages/: index.html  labels.html  labels_create.html  labels_delete.html  labels_update.html  login.html  signup.html  statuses.html  statuses_create.html  statuses_delete.html  statuses_update.html  task_show.html  tasks.html  tasks_create.html  tasks_delete.html  tasks_update.html  user_delete.html  user_update.html  users.html
